--- a/FE/FE_MeBeReact/app-project-master/src/components/header/Header.css
+++ b/FE/FE_MeBeReact/app-project-master/src/components/header/Header.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
+.bg-light.p-3.p-md-4.p-xl-5 {
+    border-radius: 5px;
+}
+
 .header_container {
     background-color: #fefefe;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
