--- a/FE/FE_MeBeReact/app-project-master/src/layout/css/Layout.css
+++ b/FE/FE_MeBeReact/app-project-master/src/layout/css/Layout.css
@@ -4,7 +4,6 @@
     min-height: 100vh;
     height: 100%;
     gap: 2.5rem;
-    /* Equivalent to space-y-10 in Tailwind CSS */
 }
 
 .layout-main {
@@ -19,6 +18,10 @@
 }
 
 .main-content {
+    position: relative;
     flex-grow: 1;
-    width: 87%;
+    width: 100%;
+    top: 115.6px;
+    height: auto;
+    margin-bottom: 200px;
 }
